{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 177,
  "lineage": "ae8cb15c-e675-6833-01db-3a1d91fe2bfc",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkInterfaces/master-nic",
            "internal_domain_name_suffix": "34j0gnywsppujdtfbv4oa5fydd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "master-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/publicIPAddresses/master-public-ip",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/master-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "master-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "kml_rg_main-9968987ef1434245"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "master-nic",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_public_ip.master",
            "module.network.azurerm_subnet.public_subnet",
            "module.network.azurerm_virtual_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkInterfaces/worker1-nic",
            "internal_domain_name_suffix": "34j0gnywsppujdtfbv4oa5fydd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "worker1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "kml_rg_main-9968987ef1434245"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "worker1-nic",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_subnet.private_subnet",
            "module.network.azurerm_virtual_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkInterfaces/worker2-nic",
            "internal_domain_name_suffix": "34j0gnywsppujdtfbv4oa5fydd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "worker2-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "kml_rg_main-9968987ef1434245"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "worker2-nic",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_subnet.private_subnet",
            "module.network.azurerm_virtual_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/natGateways/worker-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "worker-nat-gateway",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "resource_guid": "d88a04d0-2b6d-4a7f-9d3e-22308599b40b",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "worker-nat-gateway",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/natGateways/worker-nat-gateway|/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/publicIPAddresses/nat-public-ip",
            "nat_gateway_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/natGateways/worker-nat-gateway",
            "public_ip_address_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/publicIPAddresses/nat-public-ip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_nat_gateway.workers",
            "module.network.azurerm_public_ip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/publicIPAddresses/master-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.17.73",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "master-public-ip",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "master-public-ip",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/publicIPAddresses/nat-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.51.168.220",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "nat-public-ip",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nat-public-ip",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet",
            "name": "worker-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "virtual_network_name": "k8s-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "worker-subnet",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4",
            "virtual_network_name": "k8s-vnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/master-subnet",
            "name": "master-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "virtual_network_name": "k8s-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "master-subnet",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4",
            "virtual_network_name": "k8s-vnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet",
            "nat_gateway_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/natGateways/worker-nat-gateway",
            "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_nat_gateway.workers",
            "module.network.azurerm_subnet.private_subnet",
            "module.network.azurerm_virtual_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "37a393ef-9316-44df-8e65-0d7ce07cb81b",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet",
            "location": "eastus",
            "name": "k8s-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "kml_rg_main-9968987ef1434245"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "k8s-vnet",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/master-nsg",
            "location": "eastus",
            "name": "master-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "master-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/worker-nsg",
            "location": "eastus",
            "name": "worker-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "worker-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "6443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/master-nsg/securityRules/kubernetes-api",
            "name": "kubernetes-api",
            "network_security_group_name": "master-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "kubernetes-api",
            "network_security_group_name": "master-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.security.azurerm_network_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/worker-nsg/securityRules/kubelet",
            "name": "kubelet",
            "network_security_group_name": "worker-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "kubelet",
            "network_security_group_name": "worker-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.security.azurerm_network_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "master_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/master-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "master-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "master-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.security.azurerm_network_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "worker_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/worker-nsg/securityRules/worker-ssh",
            "name": "worker-ssh",
            "network_security_group_name": "worker-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "worker-ssh",
            "network_security_group_name": "worker-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.security.azurerm_network_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "worker_to_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/master-nsg/securityRules/worker-master",
            "name": "worker-master",
            "network_security_group_name": "master-nsg",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "worker-master",
            "network_security_group_name": "master-nsg",
            "resource_group_name": "kml_rg_main-9968987ef1434245",
            "subscription_id": "a2b28c85-1948-4263-90ca-bade2bac4df4"
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.security.azurerm_network_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/master-subnet",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/master-nsg",
            "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/master-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_subnet.public_subnet",
            "module.network.azurerm_virtual_network.main_vpc",
            "module.security.azurerm_network_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/networkSecurityGroups/worker-nsg",
            "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-9968987ef1434245/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/worker-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.main",
            "module.network.azurerm_subnet.private_subnet",
            "module.network.azurerm_virtual_network.main_vpc",
            "module.security.azurerm_network_security_group.worker"
          ]
        }
      ]
    }
  ]
}